<resources>
    <string name="app_name">Todo Lmao</string>

    <!--    Adapter Task Layout-->
    <string name="default_task_text">Task</string>
    <string name="default_task_group">Group</string>
    <string name="default_task_date">dd/MM/yyyy</string>

    <!--    NewTask-->
    <string name="new_task_header_text">Task:</string>
    <string name="default_new_task_hint">Enter your task</string>
    <string name="new_task_group_text">Select group</string>
    <string name="new_task_date_text">Set due date</string>

    <!--    Group Edit Layout-->
    <string name="default_no_group">There is no group here, try adding something new!</string>
    <string name="group_dialog_title_add">Add new group</string>
    <string name="group_dialog_title_edit">Edit group</string>
    <string name="group_dialog_add_btn_text">Add</string>
    <string name="group_dialog_accept_btn_text">Accept</string>
    <string name="group_dialog_cancel_btn_text">Cancel</string>
    <string name="group_dialog_add_hint">Enter group\'s name</string>

    <!--    Navigation Drawer State-->
    <string name="nav_open">Open Menu</string>
    <string name="nav_close">Close Menu</string>
    <!--    Navigation Drawer Items-->
    <string name="nav_my_day">My Day</string>
    <string name="nav_tasks">Tasks</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About</string>

    <!--    Toolbar Menu-->
    <string name="edit_group">Edit group</string>
    <string name="remove_group">Remove group</string>

    <!--    User-->
    <string name="default_user_name">User</string>
    <string name="default_local_account">Local Account</string>

    <!--    About-->
    <string name="about_progapp">This application is created for ProGApp Competition\nCopyright © 2023 LordierClaw</string>
    <string name="about_default_version">Version: Unknown</string>

    <!--    Settings-->
    <string name="settings_account_group">Account</string>
    <string name="settings_account_change_pfp">Change profile picture</string>
    <string name="settings_local_account_summary">You are using Local Account</string>
    <string name="settings_account_login">Log in</string>
    <string name="settings_account_logout">Log out</string>
    <string name="settings_account_sync">Sync</string>
    <string name="settings_account_summary_local">You are using Local Account</string>
    <string name="settings_account_summary_cloud">Logged in as </string>
    <string name="settings_general_group">General</string>
    <string name="settings_dark_mode">Dark Mode</string>
    <string name="settings_debug_group">Debug</string>
    <string name="settings_generate_dummy_data">Generate Dummy Data</string>
    <string name="settings_delete_all_task">Delete All Tasks</string>
    <string name="settings_clear_data">Clear Data</string>
    <!--    Settings Preferences Key-->
    <string name="key_account_log">settings_account_log</string>
    <string name="key_account_sync">settings_account_sync</string>
    <string name="key_account_change_pfp">settings_change_pfp</string>
    <string name="key_dark_mode">settings_dark_mode</string>
    <string name="key_generate_dummy_data">settings_generate_dummy_data</string>
    <string name="key_delete_all_task">settings_delete_all_task</string>
    <string name="key_clear_data">settings_clear_data</string>
</resources>