<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.AboutFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:layout_width="@dimen/app_icon_size"
                android:layout_height="@dimen/app_icon_size"
                android:src="@mipmap/ic_launcher"
                android:layout_margin="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                style="@style/TextAppearance.Material3.TitleLarge"/>
            <TextView
                android:id="@+id/about_version_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_default_version"
                style="@style/TextAppearance.Material3.TitleSmall"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_progapp"
            android:textAlignment="center"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"/>
    </RelativeLayout>

</FrameLayout>