<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="10dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="20dp">
        <TextView
            android:id="@+id/new_task_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_task_header_text"
            android:textAppearance="@style/TextAppearance.Material3.ActionBar.Title"
            android:layout_centerVertical="true"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/new_task_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.Material3.SearchView"
            android:hint="@string/default_new_task_hint"
            android:inputType="text"
            android:background="@null"
            android:layout_marginStart="12dp"
            android:layout_toEndOf="@id/new_task_header"
            android:layout_toStartOf="@id/new_task_btn"
            android:layout_centerVertical="true"/>

        <Button
            android:id="@+id/new_task_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_add_task_button_32"
            android:layout_alignParentEnd="true"
            android:enabled="false"
            style="@style/Widget.Material3.Button"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="20dp"
        android:nestedScrollingEnabled="true">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/selec_group_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_bulleted_list_24"
            android:text="@string/new_task_group_text"
            style="@style/Widget.Material3.Button.OutlinedButton"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/select_date_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_date_24"
            android:text="@string/new_task_date_text"
            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
            android:layout_marginStart="15dp"/>
    </LinearLayout>
</LinearLayout>