<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/Widget.Material3.CardView.Elevated"
    app:cardElevation="@dimen/default_elevation"
    app:cardCornerRadius="@dimen/default_corner_radius"
    android:layout_marginVertical="@dimen/card_view_margin_vertical"
    android:layout_marginHorizontal="@dimen/card_view_margin_horizontal">
    <RelativeLayout
        android:id="@+id/adapter_task_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="2dp"
        android:paddingBottom="10dp"
        android:paddingHorizontal="8dp">
        <CheckBox
            android:id="@+id/adapter_task_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_task_text"
            android:paddingVertical="4dp"
            style="@style/Widget.Material3.CheckedTextView"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/adapter_task_checkbox">
            <TextView
                android:id="@+id/taskGroupText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_task_group"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="5dp" />
            <TextView
                android:id="@+id/adapter_date_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_task_date"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:paddingVertical="5dp"/>
        </RelativeLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>