<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.GroupEditDialogFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp">
        <TextView
            android:id="@+id/group_dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/group_dialog_title_add"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.Material3.ActionBar.Title"
            android:layout_marginTop="20dp"/>
        <EditText
            android:id="@+id/group_dialog_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            android:layout_below="@id/group_dialog_title"
            android:layout_marginVertical="10dp"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/group_dialog_accept_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_below="@id/group_dialog_text"
            android:layout_alignParentEnd="true"
            android:text="@string/group_dialog_add_btn_text"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/group_dialog_cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:textColor="?attr/colorSecondary"
            android:text="@string/group_dialog_cancel_btn_text"
            android:layout_toStartOf="@id/group_dialog_accept_btn"
            android:layout_marginEnd="20dp"
            android:layout_below="@id/group_dialog_text"/>
    </RelativeLayout>

</FrameLayout>