<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical"
    android:padding="23dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">
        <EditText
            android:id="@+id/task_details_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/default_task_text"
            style="@style/TextAppearance.Material3.TitleLarge"
            android:textStyle="bold"
            android:background="@null"
            android:layout_toStartOf="@+id/task_details_delete_btn"
            android:layout_alignParentStart="true"/>
        <ImageView
            android:id="@+id/task_details_delete_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_delete_24"
            app:tint="?attr/colorError"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">
        <ImageView
            android:id="@+id/task_details_group_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_bulleted_list_24"
            app:tint="?attr/colorPrimary"
            android:layout_alignParentStart="true"/>
        <TextView
            android:id="@+id/task_details_group_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/default_task_group"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_toEndOf="@+id/task_details_group_icon"
            android:layout_toStartOf="@+id/task_details_group_remove_btn"
            android:layout_centerVertical="true"
            android:layout_marginHorizontal="14dp"/>
        <ImageView
            android:id="@+id/task_details_group_remove_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close_24"
            app:tint="?attr/colorPrimary"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">
        <ImageView
            android:id="@+id/task_details_date_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_date_24"
            app:tint="?attr/colorPrimary"
            android:layout_alignParentStart="true"/>
        <TextView
            android:id="@+id/task_details_date_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/default_task_date"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_toEndOf="@+id/task_details_date_icon"
            android:layout_toStartOf="@+id/task_details_date_remove_btn"
            android:layout_centerVertical="true"
            android:layout_marginHorizontal="14dp"/>
        <ImageView
            android:id="@+id/task_details_date_remove_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close_24"
            app:tint="?attr/colorPrimary"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

</LinearLayout>